初始化前端模板

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,8 +1,12 @@
-# 开发环境
-React_APP_ENV = "develop" 
+# 开发环境变量
+REACT_APP_ENV=development
 # 端口号 
-React_APP_PORT = "9999" 
-# 请求接口 
-React_APP_DEV_URL = "http://127.0.0.1:9999" 
+REACT_APP_PORT=3000
+# API 基础地址
+REACT_APP_API_BASE_URL=http://localhost:3001
 # 图片默认前缀 
-React_APP_IMG_API = "http://127.0.0.1:9999"
+REACT_APP_IMG_API=http://localhost:3001
+# 项目名称
+REACT_APP_APP_NAME=管理系统模板
+# 开发环境禁用认证验证
+REACT_APP_DISABLE_AUTH=true
