--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "description": "基于 React + Ant Design 的管理系统模板",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
     "@ant-design/plots": "^1.2.6",
     "@craco/craco": "^7.1.0",
     "@reduxjs/toolkit": "^1.9.7",
