--- a/backend/package.json
+++ b/backend/package.json
@@ -6,15 +6,21 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-jwt": "^8.5.1",
+    "formidable": "^3.5.4",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.5",
     "morgan": "~1.9.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "redis": "^5.6.1",
+    "svg-captcha": "^1.4.0"
   }
 }
