--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.10.2",
     "axios": "^1.5.1",
+    "echarts": "^5.4.3",
+    "echarts-countries-js": "^1.0.5",
+    "echarts-for-react": "^3.0.2",
+    "echarts-gl": "^2.0.9",
     "http-proxy-middleware": "^2.0.6",
     "jsencrypt": "^3.3.2",
     "react": "^18.2.0",
