--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-jwt": "^8.5.1",
