--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "express-jwt": "^8.5.1",
     "formidable": "^3.5.4",
