--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,8 +1,10 @@
 # 生产环境
-React_APP_ENV = "product" 
+REACT_APP_ENV=production
 # 端口号 
-React_APP_PORT = "9999" 
-# 请求接口 
-React_APP_DEV_URL = "http://127.0.0.1:9999" 
+REACT_APP_PORT=9999
+# API 基础地址
+REACT_APP_API_BASE_URL=http://127.0.0.1:3001
 # 图片默认前缀 
-React_APP_IMG_API = "http://127.0.0.1:9999"
+REACT_APP_IMG_API=http://127.0.0.1:3001
+# 项目名称
+REACT_APP_APP_NAME=管理系统
