--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,14 @@
     "@ant-design/icons": "^5.6.1",
     "@ant-design/plots": "^1.2.6",
     "@craco/craco": "^7.1.0",
+    "@material-ui/core": "^4.12.4",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.10.2",
     "axios": "^1.5.1",
+    "dayjs": "^1.11.13",
     "echarts": "^6.0.0",
     "http-proxy-middleware": "^2.0.6",
     "jsencrypt": "^3.3.2",
