--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "http-proxy-middleware": "^2.0.6",
     "jsencrypt": "^3.3.2",
     "mockjs": "^1.1.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
