--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "express": "~4.16.1",
     "express-jwt": "^8.5.1",
     "formidable": "^3.5.4",
