--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "echarts-for-react": "^3.0.2",
     "echarts-gl": "^2.0.9",
     "http-proxy-middleware": "^2.0.6",
+    "i18next": "^22.5.1",
     "jsencrypt": "^3.3.2",
     "live2d-widget": "^3.1.4",
     "mockjs": "^1.1.0",
@@ -27,6 +28,7 @@
     "pixi.js": "^6.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.6",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
@@ -62,6 +64,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "sass": "^1.67.0"
+    "sass": "^1.67.0",
+    "typescript": "^4.9.5"
   }
 }
