--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^3.1.10",
     "redis": "^5.6.1",
     "socket.io": "^4.8.1",
-    "svg-captcha": "^1.4.0"
+    "svg-captcha": "^1.4.0",
+    "xlsx": "^0.18.5"
   }
 }
